fixed footbar z-index

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -167,6 +167,7 @@
     bottom: 0;
     display: grid;
     grid-template-columns: 50% 50%;
+    z-index: 2;
 }
 
 .cancel{
